--- a/source/less/styles.less
+++ b/source/less/styles.less
@@ -1,1 +1,5 @@
 @import "utils/scaffolding.less";
+@import "blocks/main-header.less";
+@import "blocks/options.less";
+@import "blocks/main-page.less";
+@import "blocks/main-navigation.less";
