--- a/source/less/utils/scaffolding.less
+++ b/source/less/utils/scaffolding.less
@@ -25,8 +25,14 @@
   font-display: swap;
 }
 
+@white: #ffffff;
 @white-two: #eeeeee;
 @white-three: #fafafa;
+@white-90: rgba(255, 255, 255, 0.9);
+@dark: #303030;
+@black-two: #000000;
+@black-two-90: rgba(0, 0, 0, 0.9);
+@light-gold: #ffd840;
 
 img {
   max-width: 100%;
@@ -42,5 +48,19 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Roboto Regular", Arial, sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.43;
+  letter-spacing: normal;
   background-image: linear-gradient(45deg, @white-two, @white-three);
+}
+
+.wrapper {
+  display: flex;
+}
+
+.bottom-border {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
