--- a/source/less/blocks/options.less
+++ b/source/less/blocks/options.less
@@ -43,8 +43,13 @@
   }
 }
 
-.options__item {
+.options__current {
+  background-color: @light-gold;
 
+  & p {
+    color: @dark;
+    font-weight: 600;
+  }
 }
 
 .options__picture {
