--- a/source/less/styles.less
+++ b/source/less/styles.less
@@ -3,3 +3,4 @@
 @import "blocks/options.less";
 @import "blocks/main-page.less";
 @import "blocks/main-navigation.less";
+@import "blocks/players.less";
