--- a/source/css/styles.css
+++ b/source/css/styles.css
@@ -29,7 +29,7 @@ ul {
 }
 body {
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   font-family: "Roboto Regular", Arial, sans-serif;
   font-size: 14px;
   font-weight: normal;
@@ -39,17 +39,41 @@ body {
   letter-spacing: normal;
   background-image: linear-gradient(45deg, #eeeeee, #fafafa);
 }
+.visually-hidden {
+  display: none;
+}
 .wrapper {
+  min-width: 320px;
   display: flex;
+  justify-content: space-between;
 }
 .bottom-border {
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
+@media (max-width: 1155px) {
+  .wrapper {
+    flex-direction: column;
+  }
+}
 .main-header {
   width: 32%;
+  max-width: 508px;
   padding-top: 19px;
   padding-bottom: 19px;
   background-color: #303030;
+  transition: all 0.4s ease;
+}
+.main-header--closed {
+  width: 20%;
+}
+.main-header--closed .main-header__options {
+  display: none;
+}
+.main-header--closed ~ .main-page {
+  width: 80%;
+}
+.main-header--closed .main-header__new-vote {
+  display: none;
 }
 .main-header__wrapper {
   padding-right: 16px;
@@ -100,6 +124,27 @@ body {
   color: rgba(0, 0, 0, 0.9);
   display: block;
 }
+@media (max-width: 1200px) {
+  .main-header {
+    width: 27%;
+  }
+}
+@media (max-width: 1155px) {
+  .main-header {
+    width: 100%;
+    max-width: none;
+    padding-bottom: 0;
+  }
+  .main-header__wrapper {
+    padding-bottom: 0;
+  }
+  .main-header--closed {
+    width: 100%;
+  }
+  .main-header--closed ~ .main-page {
+    width: 100%;
+  }
+}
 .options__item fieldset {
   padding: 0;
   margin: 0;
@@ -136,13 +181,22 @@ body {
   border-radius: 100px;
   background-color: rgba(255, 255, 255, 0.6);
 }
+.options__current {
+  background-color: #ffd840;
+}
+.options__current p {
+  color: #303030;
+  font-weight: 600;
+}
 .options__picture {
   min-width: 48px;
   margin-right: 16px;
 }
 .main-page {
-  width: 66%;
+  width: 68%;
+  max-width: 1100px;
   padding: 32px;
+  margin: 0 auto;
   box-sizing: border-box;
 }
 .main-page__top-wrapper {
@@ -150,12 +204,97 @@ body {
   background-color: rgba(255, 255, 255, 0.9);
   box-shadow: 0 32px 64px 0 rgba(0, 0, 0, 0.05);
 }
+.main-page__middle-wrapper {
+  padding-left: 48px;
+  padding-top: 31px;
+  padding-bottom: 27px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.main-page__random-order {
+  width: 27%;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.main-page__random-order p {
+  padding: 0;
+  margin: 0;
+  margin-right: 28px;
+  font-weight: 600;
+  color: rgba(0, 0, 0, 0.9);
+}
+.main-page__random-order:hover .main-page__slider::before {
+  border: solid 4px rgba(255, 216, 64, 0.6);
+}
+.main-page__slider {
+  width: 40px;
+  height: 20px;
+  border-radius: 100px;
+  background-color: rgba(0, 0, 0, 0.05);
+  position: relative;
+  transition: all 0.4s ease-out;
+}
+.main-page__slider::before {
+  content: "";
+  width: 28px;
+  height: 28px;
+  border-radius: 100px;
+  background-color: #ffffff;
+  border: solid 4px transparent;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1px 4px 0 rgba(0, 0, 0, 0.1), 0 0 1px 0 rgba(0, 0, 0, 0.2);
+  position: absolute;
+  left: -1px;
+  top: -4px;
+  transition: all 0.4s ease;
+  box-sizing: border-box;
+}
+#random:checked ~ .main-page__slider {
+  background-color: #303030;
+}
+#random:checked ~ .main-page__slider::before {
+  -webkit-transform: translateX(14px);
+          transform: translateX(14px);
+}
+@media (max-width: 1200px) {
+  .main-page {
+    width: 72%;
+  }
+}
+@media (max-width: 1155px) {
+  .main-page {
+    width: 100%;
+    max-width: none;
+  }
+  .main-page__middle-wrapper {
+    padding-left: 0;
+  }
+  .main-page__random-order {
+    width: 100%;
+    justify-content: center;
+  }
+}
+@media (min-width: 1660px) {
+  .main-page {
+    max-width: 1300px;
+    margin: 0 auto;
+  }
+}
 .main-navigation__list {
+  width: 100%;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+  -ms-grid-row: 1;
 }
 .main-navigation__item {
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.main-navigation__item a {
+  text-decoration: none;
+}
+.main-navigation__item a:visited {
+  color: rgba(0, 0, 0, 0.9);
 }
 .main-navigation__item h2 {
   padding: 0;
@@ -172,4 +311,167 @@ body {
 }
 .main-navigation__item--current {
   border-bottom: 2px solid #303030;
+}
+.main-navigation__item:nth-child(1) {
+  -ms-grid-column: 1;
+}
+.main-navigation__item:nth-child(2) {
+  -ms-grid-column: 2;
+}
+.main-navigation__item:nth-child(3) {
+  -ms-grid-column: 3;
+}
+.main-navigation__item:nth-child(4) {
+  -ms-grid-column: 4;
+}
+.main-navigation__item:nth-child(5) {
+  -ms-grid-column: 5;
+}
+@media (max-width: 500px) {
+  .main-navigation__list {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
+    -ms-grid-columns: 100%;
+    -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr;
+  }
+  .main-navigation__item:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+  }
+  .main-navigation__item:nth-child(2) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+  }
+  .main-navigation__item:nth-child(3) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+  }
+  .main-navigation__item:nth-child(4) {
+    -ms-grid-row: 4;
+    -ms-grid-column: 1;
+  }
+  .main-navigation__item:nth-child(5) {
+    -ms-grid-row: 5;
+    -ms-grid-column: 1;
+  }
+}
+.players {
+  padding-top: 28px;
+  padding-bottom: 48px;
+  padding-left: 16px;
+  padding-right: 16px;
+  display: flex;
+  justify-content: space-between;
+}
+.players__embed {
+  width: 23%;
+  height: 30px;
+  padding-left: 32px;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  position: relative;
+}
+.players__embed p {
+  padding: 0;
+  margin: 0;
+  color: #26bf8c;
+}
+.players__checkbox {
+  display: none;
+  position: absolute;
+  left: 10px;
+  top: 5px;
+}
+#embed:checked ~ .players__checkbox {
+  display: block;
+}
+.players__list {
+  width: 76%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(148px, 1fr));
+  grid-row-gap: 28px;
+  display: -ms-flexbox;
+  -ms-flex-wrap: wrap;
+  justify-content: space-between;
+}
+.players__item {
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+.players__item:hover {
+  -webkit-filter: contrast(80%);
+  filter: contrast(80%);
+}
+.players__item img {
+  width: 100%;
+  max-width: 148px;
+  margin: 0 auto;
+  border: solid 1px rgba(0, 0, 0, 0.05);
+  border-radius: 50%;
+  display: block;
+}
+.players__item h3 {
+  padding: 0;
+  margin: 0;
+  color: rgba(0, 0, 0, 0.9);
+  text-align: center;
+}
+.players__item--mock-up {
+  width: 148px;
+  height: 148px;
+  margin: 0 auto;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.4);
+  position: relative;
+}
+.players__item--mock-up:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.4);
+}
+.players__item--mock-up::before {
+  content: "";
+  width: 20px;
+  height: 20px;
+  opacity: .6;
+  position: absolute;
+  top: 44%;
+  left: 44%;
+  background-image: url("../img/icons/plus.svg");
+}
+@media (min-width: 1500px) {
+  .players__list {
+    grid-template-columns: repeat(auto-fit, minmax(153px, 1fr));
+  }
+}
+@media (min-width: 1660px) {
+  .players__list {
+    grid-template-columns: repeat(auto-fit, minmax(164px, 1fr));
+  }
+  .players__item img {
+    max-width: 164px;
+  }
+  .players__item--mock-up {
+    width: 164px;
+    height: 164px;
+  }
+}
+@media (max-width: 1155px) {
+  .players {
+    flex-direction: column;
+  }
+  .players__embed {
+    width: 100%;
+    margin-bottom: 16px;
+  }
+  .players__list {
+    width: 100%;
+  }
+}
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .players__item {
+    margin-bottom: 10px;
+    margin-left: 10px;
+  }
 }
