--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -1,8 +1,26 @@
 .main-header {
   width: 32%;
+  max-width: 508px;
   padding-top: 19px;
   padding-bottom: 19px;
   background-color: @dark;
+  transition: all 0.4s ease;
+}
+
+.main-header--closed {
+  width: 20%;
+
+  & .main-header__options {
+    display: none;
+  }
+
+  & ~ .main-page {
+    width: 80%;
+  }
+
+  & .main-header__new-vote {
+    display: none;
+  }
 }
 
 .main-header__wrapper {
@@ -57,4 +75,30 @@
   box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.2), 0 1px 2px 0 rgba(0, 0, 0, 0.1);
   color: @black-two-90;
   display: block;
+}
+
+@media (max-width: @minimum-width) {
+  .main-header {
+    width: 27%;
+  }
+}
+
+@media (max-width: @tablet) {
+  .main-header {
+    width: 100%;
+    max-width: none;
+    padding-bottom: 0;
+  }
+
+  .main-header__wrapper {
+    padding-bottom: 0;
+  }
+
+  .main-header--closed {
+    width: 100%;
+
+    & ~ .main-page {
+      width: 100%;
+    }
+  }
 }
