--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -39,16 +39,12 @@
   border: none;
   background-color: transparent;
   position: relative;
+}
 
-  &::before {
-    content: "";
-    width: 18px;
-    height: 18px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-image: url("../img/icons/burger.svg");
-  }
+.main-header__burger-icon {
+  position: absolute;
+  top: 2px;
+  left: 2px;
 }
 
 .main-header__logo {
