--- a/source/less/blocks/players.less
+++ b/source/less/blocks/players.less
@@ -83,15 +83,11 @@
       box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.4);
     }
 
-    &::before {
-      content: "";
-      width: 20px;
-      height: 20px;
+    & .players__add-player{
       opacity: .6;
       position: absolute;
       top: 44%;
       left: 44%;
-      background-image: url("../img/icons/plus.svg");
     }
   }
 }
