--- a/source/less/blocks/main-page.less
+++ b/source/less/blocks/main-page.less
@@ -20,18 +20,17 @@
 }
 
 .main-page__random-order {
-  width: 27%;
+  width: 23%;
+  padding: 0;
+  margin: 0;
+  margin-right: 28px;
+  font-weight: 600;
+  color: @black-two-90;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   cursor: pointer;
 
-  & p {
-    padding: 0;
-    margin: 0;
-    margin-right: 28px;
-    font-weight: 600;
-    color: @black-two-90;
-  }
 
   &:hover .main-page__slider::before{
     border: solid 4px rgba(255, 216, 64, 0.6);
